--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+	<link href="resources/css/style.css" type="css/text" rel="stylesheet">
+
+</head>
+
+<body>
+	
+
+
+</body>
+</html>
