added header html and logos

--- a/index.html
+++ b/index.html
@@ -7,8 +7,30 @@
 </head>
 
 <body>
-	
 
+	<!-- Header -->
+	<header>
+		<div class="logo" >
+			<img src="resources/images/ic-logo.svg" />
+		</div>
+
+		<nav class="desktop">
+			<a href="#">On Campus</a>
+			<a href="#">Online</a>
+			<a href="#">For Companies</a>
+			<a href="#">Sign In</a>
+		</nav>
+		<nav class="mobile">
+			<a href="#"><img src="resources/images/ic-on-campus.svg"></a>
+			<a href="#"><img src="resources/images/ic-online.svg"></a>
+			<a href="#"><img src="resources/images/ic-login.svg"></a>
+		</nav>
+		
+	</header>
+
+	<!-- Main -->
+		
+	
 
 </body>
 </html>
