--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
 	</header>
 
 	<!-- Main -->
+
+	<!-- Banner Section -->
+	<div class="banner-section">
+		<img src="resources/images/banner.jpg" />
+		<h1>Learn something new today</h1>
+		<h3>Start learning with Colmar</h3>
+		<a href="#" class="button">Start here</a>
+	</div>
 		
 	
 
