--- a/index.html
+++ b/index.html
@@ -38,7 +38,60 @@
 		<a href="#" class="button">Start here</a>
 	</div>
 		
-	
+	<!-- Info Section -->
+	<div class="info-section">
+	  <div class="desktop">
+		<div id="emanuel">
+			<img src="resources/images/information-main.jpg" />
+			<h2>It doesn´t hurt to keep practicing</h2>
+			<p>Professionals choose Colmar as their favorite academy to keep on learning </p>
+			<p>Emanuel, Sr Strategist at Hiring.com</p>
+		</div>
+		<div class="image-container">
+			<img src="resources/images/information-orientation.jpg" />
+			<h4>Orientation Date</h4>
+			<p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+			<a href="#">Read More</a>
+		</div>
+		<div class="image-container">
+			<img src="resources/images/information-campus.jpg" />
+			<h4>Our Campus</h4>
+			<p>Find which campus is close by you</p>
+			<a href="#">Read More</a>
+		</div>
+		<div class="image-container">
+			<img src="resources/images/information-guest-lecture.jpg" />
+			<h4>Our Guest Lecture</h4>
+			<p>Join a Keynote with Oliver Sack about music in medical treatment</p>
+			<a href="#">Read More</a>
+		</div>
+	    </div>
+
+	   <div class="mobile">
+	   	<div class="image-container">
+			<img src="resources/images/information-orientation-mobile.jpg" />
+			<h4>Orientation Date</h4>
+			<p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+			<a href="#">Read More</a>
+		</div>
+		<div class="image-container">
+			<img src="resources/images/information-campus-mobile.jpg" />
+			<h4>Our Campus</h4>
+			<p>Find which campus is close by you</p>
+			<a href="#">Read More</a>
+		</div>
+		<div class="image-container">
+			<img src="resources/images/information-guest-lecture-mobile.jpg" />
+			<h4>Our Guest Lecture</h4>
+			<p>Join a Keynote with Oliver Sack about music in medical treatment</p>
+			<a href="#">Read More</a>
+		</div>
+	    </div>
+
+	    	
+	    </div>
+
+ 
 
 </body>
 </html>
