--- a/index.html
+++ b/index.html
@@ -87,9 +87,77 @@
 			<a href="#">Read More</a>
 		</div>
 	    </div>
+    </div>
 
-	    	
-	    </div>
+    <!-- Courses Section -->
+
+    <div class="courses">
+    	<div class="section-header">
+    		<h2>Start Learning</h2>
+    	</div>
+    	<div class="desktop">
+    		<div class="course">
+    			<img src="resources/images/course-software.jpg" />
+    			<h3>Software Engineering</h3>
+    			<p>COURSES</p>
+    			<p>Web Development, Mobile Develoment, iOTS, APIS</p>
+    		</div>
+    		<div class="course">
+    			<img src="resources/images/course-computer-art.jpg" />
+    			<h3>Computer Art</h3>
+    			<p>COURSES</p>
+    			<p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+    		</div>
+    		<div class="course">
+    			<img src="resources/images/course-design.jpg" />
+    			<h3>Design</h3>
+    			<p>COURSES</p>
+    			<p>User Experience Design, User Research, Visual Design </p>
+    		</div>
+    		<div class="course">
+    			<img src="resources/images/course-data.jpg" />
+    			<h3>Data</h3>
+    			<p>COURSES</p>
+    			<p>Data Science, Big Data,SQL, Data Visualitazion</p>
+    		</div>
+    		<div class="course">
+    			<img src="resources/images/course-business.jpg" />
+    			<h3>Business</h3>
+    			<p>COURSES</p>
+    			<p>Product Development, Business Development, Startup</p>
+    		</div>
+    		<div class="course">
+    			<img src="resources/images/course-marketing.jpg" />
+    			<h3>Marketing</h3>
+    			<p>COURSES</p>
+    			<p>Analytics, Content Marketing, Mobile Marketing</p>
+    		</div>
+    	</div>
+    	<div class="mobile">
+    		<div class="course">
+    			<h3>Software Engineering</h3>
+    			</div>
+    		<div class="course">
+    			<h3>Computer Art</h3>
+    			</div>
+    		<div class="course">
+    			<h3>Design</h3>
+    		</div>
+    		<div class="course">
+    			<h3>Data</h3>
+    		</div>
+    		<div class="course">
+    			<h3>Business</h3>
+    		</div>
+    		<div class="course">
+    			<h3>Marketing</h3>
+    		</div>
+    	</div>
+    </div>
+
+
+
+
 
  
 
