--- a/index.html
+++ b/index.html
@@ -155,6 +155,40 @@
     	</div>
     </div>
 
+    <!-- Thesis Exhibit -->
+    <div class="thesis-exhibit">
+    	<div class="desktop">
+    	<div class="thesis-video">
+    		<video controls>
+    			<source src="resources/videos/thesis.mp4" type="video/mp4">
+    		</video>
+    	</div> 
+    	<div class="thesis">
+    		<img src="resources/imagesthesis-fisma.jpg" />
+    		<h3>Fisma: Design and Prototype</h3>
+    		<p>Designer showcase of new prototype product</p>
+    	</div>
+    	<div class="thesis">
+    		<img src="resources/thesis-now-and-then.jpg" />
+    		<h3>Now and Then</h3>
+    		<p>Research study about New York City</p>
+    	</div>
+    </div>
+    <div class="mobile">
+    	<div class="thesis-video">
+    		<video controls>
+    			<source src="resources/videos/thesis.mp4" type="video/mp4">
+    		</video>
+    	</div>
+    </div>
+</div>
+
+<!-- Footer -->
+
+
+
+
+
 
 
 
