--- a/index.html
+++ b/index.html
@@ -162,14 +162,15 @@
     		<video controls>
     			<source src="resources/videos/thesis.mp4" type="video/mp4">
     		</video>
+    		<h3>Reimagine Urban</h3>
     	</div> 
     	<div class="thesis">
-    		<img src="resources/imagesthesis-fisma.jpg" />
+    		<img src="resources/images/thesis-fisma.jpg" />
     		<h3>Fisma: Design and Prototype</h3>
     		<p>Designer showcase of new prototype product</p>
     	</div>
     	<div class="thesis">
-    		<img src="resources/thesis-now-and-then.jpg" />
+    		<img src="resources/images/thesis-now-and-then.jpg" />
     		<h3>Now and Then</h3>
     		<p>Research study about New York City</p>
     	</div>
@@ -185,7 +186,10 @@
 
 <!-- Footer -->
 
-
+<footer>
+	<p class="copyright"> &#169; Colmar Academy. All Rights Reserved</p>
+	<p>Terms & Privacy</p>
+</footer>
 
 
 
