--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-	<link href="resources/css/style.css" type="css/text" rel="stylesheet">
-
+	<link rel="stylesheet" type="text/css" href="Resources/css/style.css">
 </head>
 
 <body>
@@ -12,7 +11,9 @@
 	<header>
 		<div class="logo" >
 			<img src="resources/images/ic-logo.svg" />
+			<a class="title-1">COLMAR</a><a class="title-2">ACADEMY</a>
 		</div>
+		
 
 		<nav class="desktop">
 			<a href="#">On Campus</a>
@@ -32,11 +33,15 @@
 
 	<!-- Banner Section -->
 	<div class="banner-section">
+        <div class="banner-image">
 		<img src="resources/images/banner.jpg" />
+    </div>
+        <div class="banner-content">
 		<h1>Learn something new today</h1>
 		<h3>Start learning with Colmar</h3>
 		<a href="#" class="button">Start here</a>
 	</div>
+</div>
 		
 	<!-- Info Section -->
 	<div class="info-section">
@@ -163,6 +168,7 @@
     			<source src="resources/videos/thesis.mp4" type="video/mp4">
     		</video>
     		<h3>Reimagine Urban</h3>
+    		<p>"A work on a new aproach on urban areas"∫</p>
     	</div> 
     	<div class="thesis">
     		<img src="resources/images/thesis-fisma.jpg" />
