--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	</header>
 
 	<!-- Main -->
-
+    <main>
 	<!-- Banner Section -->
 	<div class="banner-section">
         <div class="banner-image">
@@ -39,7 +39,7 @@
         <div class="banner-content">
 		<h1>Learn something new today</h1>
 		<h3>Start learning with Colmar</h3>
-		<a href="#" class="button">Start here</a>
+		<button>Start here</button>
 	</div>
 </div>
 		
@@ -189,6 +189,8 @@
     	</div>
     </div>
 </div>
+
+</main>
 
 <!-- Footer -->
 
