adde again some banner css styles

--- a/index.html
+++ b/index.html
@@ -32,16 +32,14 @@
 	<!-- Main -->
     <main>
 	<!-- Banner Section -->
-	<div class="banner-section">
-        <div class="banner-image">
+	<section class="banner-section">
 		<img src="resources/images/banner.jpg" />
-    </div>
         <div class="banner-content">
 		<h1>Learn something new today</h1>
 		<h3>Start learning with Colmar</h3>
-		<button>Start here</button>
-	</div>
-</div>
+		<a href="#"><p class="button"> Start here </p></a>
+	     </div>
+     </section>
 		
 	<!-- Info Section -->
 	<div class="info-section">
