--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  
  <head>
-    <link rel="stylsheet" href="resources/css/style.css">
+    <link rel="stylesheet" href="resources/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <title>Colmar Academy</title>
@@ -43,17 +43,17 @@
     <div class="desktop">
     <img src="resources/images/banner.jpg">
     <div class="banner-content">
-        <h2>Learn somethingnew everyday</h2>
+        <h2>Learn something new everyday</h2>
         <h4>You could gain new knowledge every single day</h4>
         <div class="button-primary">
             <h4>Start Here</h4>
         </div>
     </div>
 
-<div class="desktop">
+<div class="mobile">
     <img src="resources/images/banner.jpg">
     <div class="banner-content">
-        <h2>Learn somethingnew everyday</h2>
+        <h2>Learn something new everyday</h2>
         <h4>You could gain new knowledge every single day</h4>
         <div class="button-primary">
             <h4>Start Here</h4>
@@ -203,7 +203,7 @@
     </div>
     <div class="thesis">
         <img src="resources/images/thesis-now-and-then.jpg">
-        <h4>Now abnd Then</h4>
+        <h4>Now and Then</h4>
         <p>Research study about New York</p>
     </div>
 </div>
