added header & banner css styles

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
 <!-- Header and Navigation Bar -->
     <header class="desktop">
+        <div class="page-title">
             <img id ="page-logo" src="resources/images/ic-logo.svg">
             <h2 id="page-title">COLMAR</h2><h2 id="page-title-1">ACADEMY</h2>
+        </div>
             <nav>
                 <ul>
                     <li><a href="#">On Campus</a></li>
