changed styling in header adn banner section

--- a/index.html
+++ b/index.html
@@ -17,22 +17,12 @@
         </div>
             <nav>
                 <ul>
-                    <li><a href="#">On Campus</a></li>
-                    <li><a href="#">On Line</a></li>
-                    <li><a href="#">For Companies</a></li>
-                    <li><a href="#">Sign In</a></li>
+                    <li><a href="#"><span>On Campus</span><img src="resources/images/ic-on-campus.svg"></a></li>
+                    <li><a href="#"><span>On Line</span><img src="resources/images/ic-online.svg"></a></li>
+                    <li><a href="#"><span>For Companies</span></a></li>
+                    <li><a href="#"><span>Sign In</span></a><img src="resources/images/ic-login.svg"></li>
                 </ul>
             </nav>
-
-        </header>
-        <header class="mobile">
-            <img id ="page-logo" src="resources/images/ic-logo.svg">
-            <nav>
-                <ul>
-                    <li><a href="#"><img src="resources/images/ic-on-campus.svg"></a></li>
-                    <li><a href="#"><img src="resources/images/ic-online.svg"></a></li>
-                    <li><a href="#"><img src="resources/images/ic-login.svg"></a></li>
-                </nav>
         </header>
 
 <!-- Main Content -->
@@ -42,26 +32,14 @@
 <!-- Banner Section -->
 
 <section class="banner">
-    <div class="desktop">
-    <img src="resources/images/banner.jpg">
-    <div class="banner-content">
-        <h2>Learn something new everyday</h2>
-        <h4>You could gain new knowledge every single day</h4>
-        <div class="button-primary">
-            <h4>Start Here</h4>
+        <img src="resources/images/banner.jpg">
+        <div class="banner-content">
+            <h2>Learn something new everyday</h2>
+            <h4>You could gain new knowledge every single day</h4>
+            <div class="button-primary">
+                <h4>Start Here</h4>
+            </div>
         </div>
-    </div>
-
-<div class="mobile">
-    <img src="resources/images/banner.jpg">
-    <div class="banner-content">
-        <h2>Learn something new everyday</h2>
-        <h4>You could gain new knowledge every single day</h4>
-        <div class="button-primary">
-            <h4>Start Here</h4>
-        </div>
-    </div>
-
 </section>
 
 <!-- Informartion Section  -->
@@ -234,8 +212,3 @@
 
 
     
-
-
-
-
-
