added banner styling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img src="resources/images/banner.jpg">
         <div class="banner-content">
             <h2>Learn something new everyday</h2>
-            <h4>You could gain new knowledge every single day</h4>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
             <div class="button-primary">
                 <h4>Start Here</h4>
             </div>
