--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h2>Learn something new everyday</h2>
             <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
             <div class="button-primary">
-                <h4>Start Here</h4>
+                <a href="#"><h4>Start Here</h4></a>
             </div>
         </div>
 </section>
