--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 
 <!-- Informartion Section  -->
 
-<section class="Informartion">
-    <div class="desktop">
+<section class="information">
     <div class="information-article-main">
         <img src="resources/images/information-main.jpg">
         <h3>I'ts doesn´t hurt to keep practicing</h3>
@@ -53,45 +52,23 @@
         <p> Emanuel, Sr Stratgegist at Hiring.com</p>
     </div>
     <div class="information-article">
-        <img src="resources/images/information-orientation.jpg">
+        <span><img src="resources/images/information-orientation.jpg"> <img src="resources/images/information-orientation-mobile.jpg"></span>
         <h4>Orientation Date</h4>
         <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
         <a href="#">Read More</a>
     </div>
     <div class="information-article">
-        <img src="resources/images/information-campus.jpg">
+        <span><img src="resources/images/information-campus.jpg"><img src="resources/images/information-campus-mobile.jpg"></span>
         <h4>Our Campus</h4>
         <p>Find which campus is close by you</p>
         <a href="#">Read More</a>
     </div>
     <div class="information-article">
-        <img src="resources/images/information-guest-lecture.jpg">
+        <span><img src="resources/images/information-guest-lecture.jpg"><img src="resources/images/information-guest-lecture-mobile.jpg"></span>
         <h4>Our guest lecture</h4>
         <p>Join a keynote with Oliver Sack about music in medical treatment</p>
         <a href="#">Read More</a>
     </div>
-</div>
-
-<div class="mobile">
-    <div class="information-article">
-        <img src="resources/images/information-orientation-mobile.jpg">
-        <h4>Orientation Date</h4>
-        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-        <a href="#">Read More</a>
-    </div>
-    <div class="information-article">
-        <img src="resources/images/information-campus-mobile.jpg">
-        <h4>Our Campus</h4>
-        <p>Find which campus is close by you</p>
-        <a href="#">Read More</a>
-    </div>
-    <div class="information-article">
-        <img src="resources/images/information-guest-lecture-mobile.jpg">
-        <h4>Our guest lecture</h4>
-        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-        <a href="#">Read More</a>
-    </div>
-</div>
 </section>
 
 <!-- Courses Section -->
