--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <section class="banner">
         <img src="resources/images/banner.jpg">
         <div class="banner-content">
-            <h2>Learn something new everyday</h2>
+            <h3>Learn something new everyday</h3>
             <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
             <div class="button-primary">
                 <a href="#"><h4>Start Here</h4></a>
@@ -45,29 +45,33 @@
 <!-- Informartion Section  -->
 
 <section class="information">
-    <div class="information-article-main">
-        <img src="resources/images/information-main.jpg">
-        <h3>I'ts doesn´t hurt to keep practicing</h3>
-        <p>"Since i've graduated fomr college i just kepot on learning"</p>
-        <p> Emanuel, Sr Stratgegist at Hiring.com</p>
+    <div class="information primary">
+        <div class="information-article">
+            <span><img src="resources/images/information-main.jpg"></span>
+            <h3>I'ts doesn´t hurt to keep practicing</h3>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent at pretium ligula, luctus suscipit felis. In vel dolor elit. Sed rhoncus odio nunc, in ultrices diam tincidunt eget.</h4>
+            <p> Emanuel, Sr Stratgegist at Hiring.com</p>
+        </div>
     </div>
-    <div class="information-article">
-        <span><img src="resources/images/information-orientation.jpg"> <img src="resources/images/information-orientation-mobile.jpg"></span>
-        <h4>Orientation Date</h4>
-        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-        <a href="#">Read More</a>
-    </div>
-    <div class="information-article">
-        <span><img src="resources/images/information-campus.jpg"><img src="resources/images/information-campus-mobile.jpg"></span>
-        <h4>Our Campus</h4>
-        <p>Find which campus is close by you</p>
-        <a href="#">Read More</a>
-    </div>
-    <div class="information-article">
-        <span><img src="resources/images/information-guest-lecture.jpg"><img src="resources/images/information-guest-lecture-mobile.jpg"></span>
-        <h4>Our guest lecture</h4>
-        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-        <a href="#">Read More</a>
+    <div class="information secondary">
+        <div class="information-article">
+            <span><img src="resources/images/information-orientation.jpg"></span> <img src="resources/images/information-orientation-mobile.jpg">
+            <h4>Orientation Date</h4>
+            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+            <a href="#">Read More</a>
+        </div>
+        <div class="information-article">
+            <span><img src="resources/images/information-campus.jpg"><img src="resources/images/information-campus-mobile.jpg"></span>
+            <h4>Our Campus</h4>
+            <p>Find which campus is close by you</p>
+            <a href="#">Read More</a>
+        </div>
+        <div class="information-article">
+            <span><img src="resources/images/information-guest-lecture.jpg"><img src="resources/images/information-guest-lecture-mobile.jpg"></span>
+            <h4>Our guest lecture</h4>
+            <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+            <a href="#">Read More</a>
+        </div>
     </div>
 </section>
 
