added mor estyling css in info section

--- a/index.html
+++ b/index.html
@@ -48,29 +48,35 @@
     <div class="information primary">
         <div class="information-article">
             <span><img src="resources/images/information-main.jpg"></span>
-            <h3>I'ts doesn´t hurt to keep practicing</h3>
-            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent at pretium ligula, luctus suscipit felis. In vel dolor elit. Sed rhoncus odio nunc, in ultrices diam tincidunt eget.</h4>
-            <p> Emanuel, Sr Stratgegist at Hiring.com</p>
-        </div>
+                <h3>I'ts doesn´t hurt to keep practicing</h3>
+                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent at pretium ligula, luctus suscipit felis. In vel dolor elit. Sed rhoncus odio nunc, in ultrices diam tincidunt eget.</h4>
+                <p> Emanuel, Sr Stratgegist at Hiring.com</p>
+            </div>
     </div>
     <div class="information secondary">
         <div class="information-article">
-            <span><img src="resources/images/information-orientation.jpg"></span> <img src="resources/images/information-orientation-mobile.jpg">
-            <h4>Orientation Date</h4>
-            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-            <a href="#">Read More</a>
+            <span><img class="information images" src="resources/images/information-orientation.jpg"><img class="mobile" src="resources/images/information-orientation-mobile.jpg"></span>
+            <div class="information-article-text">
+                <h4>Orientation Date</h4>
+                <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                <a href="#">Read More</a>
+            </div>
         </div>
         <div class="information-article">
-            <span><img src="resources/images/information-campus.jpg"><img src="resources/images/information-campus-mobile.jpg"></span>
+            <span><img  class="information images"src="resources/images/information-campus.jpg"><img class="mobile"  src="resources/images/information-campus-mobile.jpg"></span>
+            <div class="information-article-text">
             <h4>Our Campus</h4>
             <p>Find which campus is close by you</p>
             <a href="#">Read More</a>
         </div>
+        </div>
         <div class="information-article">
-            <span><img src="resources/images/information-guest-lecture.jpg"><img src="resources/images/information-guest-lecture-mobile.jpg"></span>
+            <span><img class="information images" src="resources/images/information-guest-lecture.jpg"><img class="mobile"  src="resources/images/information-guest-lecture-mobile.jpg"></span>
+            <div class="information-article-text">
             <h4>Our guest lecture</h4>
             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
             <a href="#">Read More</a>
+        </div>
         </div>
     </div>
 </section>
